coala/bcLc/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> <empty>
Rule 2     program -> program rule DOT
Rule 3     program -> program ESCAPE_ASP
Rule 4     program -> program ROLE_BEGIN role ROLE_END
Rule 5     role -> <empty>
Rule 6     role -> role rule DOT
Rule 7     role -> role ESCAPE_ASP
Rule 8     rule -> fact
Rule 9     rule -> law
Rule 10    rule -> query
Rule 11    fact -> pred_fact
Rule 12    fact -> act_fact
Rule 13    fact -> int_fact
Rule 14    fact -> flu_fact
Rule 15    law -> static_law
Rule 16    law -> dynamic_law
Rule 17    law -> inertial_law
Rule 18    law -> default_law
Rule 19    law -> imposs_law
Rule 20    law -> nonexe_law
Rule 21    law -> visible_law
Rule 22    visible_law -> VISIBLE fluent_formula if_part where_part
Rule 23    query -> init_rule
Rule 24    query -> goal_query
Rule 25    pred_fact -> formula where_part
Rule 26    act_fact -> ACT fluent_formula where_part
Rule 27    int_fact -> INT fluent_formula int_domain where_part
Rule 28    flu_fact -> FLU fluent_formula where_part
Rule 29    flu_fact -> DFLU fluent_formula where_part
Rule 30    static_law -> formula IF formula ifcons_part where_part
Rule 31    static_law -> formula IFCONS formula where_part
Rule 32    dynamic_law -> formula after_part ifcons_part where_part
Rule 33    dynamic_law -> formula CAUSES formula where_part
Rule 34    dynamic_law -> formula CAUSES formula IF formula where_part
Rule 35    inertial_law -> INERTIAL fluent_formula where_part
Rule 36    default_law -> DEFAULT formula where_part
Rule 37    default_law -> DEFAULT formula IF formula where_part
Rule 38    default_law -> DEFAULT formula AFTER formula where_part
Rule 39    imposs_law -> IMPOSSIBLE formula ifcons_part where_part
Rule 40    nonexe_law -> NONEXE formula if_part ifcons_part where_part
Rule 41    init_rule -> INIT formula where_part
Rule 42    goal_query -> GOAL formula where_part
Rule 43    if_part -> <empty>
Rule 44    if_part -> IF formula
Rule 45    after_part -> AFTER formula
Rule 46    ifcons_part -> <empty>
Rule 47    ifcons_part -> IFCONS formula
Rule 48    where_part -> <empty>
Rule 49    where_part -> WHERE bindings
Rule 50    bindings -> binding
Rule 51    bindings -> bindings COMMA binding
Rule 52    binding -> ACT fluent
Rule 53    binding -> FLU fluent equalpart
Rule 54    binding -> NOT asp_term
Rule 55    binding -> asp_term
Rule 56    binding -> MINUS fluent
Rule 57    formula -> tfa
Rule 58    formula -> formula COMMA tfa
Rule 59    tfa -> atom
Rule 60    tfa -> TRUE
Rule 61    tfa -> FALSE
Rule 62    atom -> fluent equalpart
Rule 63    atom -> NOT fluent equalpart
Rule 64    atom -> MINUS fluent equalpart
Rule 65    fluent_formula -> fluent equalpart
Rule 66    fluent_formula -> fluent_formula COMMA fluent equalpart
Rule 67    equalpart -> <empty>
Rule 68    equalpart -> EQ term
Rule 69    fluent -> IDENTIFIER
Rule 70    fluent -> var_term
Rule 71    fluent -> IDENTIFIER LBRAC term_list RBRAC
Rule 72    term_list -> term
Rule 73    term_list -> term COMMA term_list
Rule 74    term -> var_term
Rule 75    term -> IDENTIFIER
Rule 76    term -> NUMBER
Rule 77    term -> MINUS NUMBER
Rule 78    term -> IDENTIFIER LBRAC term_list RBRAC
Rule 79    var_term -> VARIABLE
Rule 80    int_domain -> <empty>
Rule 81    int_domain -> COLON term DDOT term
Rule 82    asp_term -> asp_operation
Rule 83    asp_term -> asp_operation asp_eqoperator asp_operation
Rule 84    asp_operation -> term
Rule 85    asp_operation -> asp_operation asp_operator term
Rule 86    asp_eqoperator -> EQQ
Rule 87    asp_eqoperator -> EQ
Rule 88    asp_eqoperator -> NEQ
Rule 89    asp_eqoperator -> LT
Rule 90    asp_eqoperator -> GT
Rule 91    asp_eqoperator -> LE
Rule 92    asp_eqoperator -> GE
Rule 93    asp_operator -> PLUS
Rule 94    asp_operator -> MINUS
Rule 95    asp_operator -> POWER
Rule 96    asp_operator -> TIMES
Rule 97    asp_operator -> DIV

Terminals, with rules where they appear

ACT                  : 26 52
AFTER                : 38 45
CAUSES               : 33 34
COLON                : 81
COMMA                : 51 58 66 73
DDOT                 : 81
DEFAULT              : 36 37 38
DFLU                 : 29
DIV                  : 97
DOT                  : 2 6
EQ                   : 68 87
EQQ                  : 86
ESCAPE_ASP           : 3 7
FALSE                : 61
FLU                  : 28 53
GE                   : 92
GOAL                 : 42
GT                   : 90
IDENTIFIER           : 69 71 75 78
IF                   : 30 34 37 44
IFCONS               : 31 47
IMPOSSIBLE           : 39
INERTIAL             : 35
INIT                 : 41
INT                  : 27
LBRAC                : 71 78
LE                   : 91
LT                   : 89
MINUS                : 56 64 77 94
NEQ                  : 88
NONEXE               : 40
NOT                  : 54 63
NUMBER               : 76 77
PLUS                 : 93
POWER                : 95
RBRAC                : 71 78
ROLE_BEGIN           : 4
ROLE_END             : 4
TIMES                : 96
TRUE                 : 60
VARIABLE             : 79
VISIBLE              : 22
WHERE                : 49
error                : 

Nonterminals, with rules where they appear

act_fact             : 12
after_part           : 32
asp_eqoperator       : 83
asp_operation        : 82 83 83 85
asp_operator         : 85
asp_term             : 54 55
atom                 : 59
binding              : 50 51
bindings             : 49 51
default_law          : 18
dynamic_law          : 16
equalpart            : 53 62 63 64 65 66
fact                 : 8
flu_fact             : 14
fluent               : 52 53 56 62 63 64 65 66
fluent_formula       : 22 26 27 28 29 35 66
formula              : 25 30 30 31 31 32 33 33 34 34 34 36 37 37 38 38 39 40 41 42 44 45 47 58
goal_query           : 24
if_part              : 22 40
ifcons_part          : 30 32 39 40
imposs_law           : 19
inertial_law         : 17
init_rule            : 23
int_domain           : 27
int_fact             : 13
law                  : 9
nonexe_law           : 20
pred_fact            : 11
program              : 2 3 4 0
query                : 10
role                 : 4 6 7
rule                 : 2 6
static_law           : 15
term                 : 68 72 73 81 81 84 85
term_list            : 71 73 78
tfa                  : 57 58
var_term             : 70 74
visible_law          : 21
where_part           : 22 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> .
    (2) program -> . program rule DOT
    (3) program -> . program ESCAPE_ASP
    (4) program -> . program ROLE_BEGIN role ROLE_END

    ESCAPE_ASP      reduce using rule 1 (program -> .)
    ROLE_BEGIN      reduce using rule 1 (program -> .)
    ACT             reduce using rule 1 (program -> .)
    INT             reduce using rule 1 (program -> .)
    FLU             reduce using rule 1 (program -> .)
    DFLU            reduce using rule 1 (program -> .)
    INERTIAL        reduce using rule 1 (program -> .)
    DEFAULT         reduce using rule 1 (program -> .)
    IMPOSSIBLE      reduce using rule 1 (program -> .)
    NONEXE          reduce using rule 1 (program -> .)
    VISIBLE         reduce using rule 1 (program -> .)
    INIT            reduce using rule 1 (program -> .)
    GOAL            reduce using rule 1 (program -> .)
    TRUE            reduce using rule 1 (program -> .)
    FALSE           reduce using rule 1 (program -> .)
    NOT             reduce using rule 1 (program -> .)
    MINUS           reduce using rule 1 (program -> .)
    IDENTIFIER      reduce using rule 1 (program -> .)
    VARIABLE        reduce using rule 1 (program -> .)
    $end            reduce using rule 1 (program -> .)

    program                        shift and go to state 1

state 1

    (0) S' -> program .
    (2) program -> program . rule DOT
    (3) program -> program . ESCAPE_ASP
    (4) program -> program . ROLE_BEGIN role ROLE_END
    (8) rule -> . fact
    (9) rule -> . law
    (10) rule -> . query
    (11) fact -> . pred_fact
    (12) fact -> . act_fact
    (13) fact -> . int_fact
    (14) fact -> . flu_fact
    (15) law -> . static_law
    (16) law -> . dynamic_law
    (17) law -> . inertial_law
    (18) law -> . default_law
    (19) law -> . imposs_law
    (20) law -> . nonexe_law
    (21) law -> . visible_law
    (23) query -> . init_rule
    (24) query -> . goal_query
    (25) pred_fact -> . formula where_part
    (26) act_fact -> . ACT fluent_formula where_part
    (27) int_fact -> . INT fluent_formula int_domain where_part
    (28) flu_fact -> . FLU fluent_formula where_part
    (29) flu_fact -> . DFLU fluent_formula where_part
    (30) static_law -> . formula IF formula ifcons_part where_part
    (31) static_law -> . formula IFCONS formula where_part
    (32) dynamic_law -> . formula after_part ifcons_part where_part
    (33) dynamic_law -> . formula CAUSES formula where_part
    (34) dynamic_law -> . formula CAUSES formula IF formula where_part
    (35) inertial_law -> . INERTIAL fluent_formula where_part
    (36) default_law -> . DEFAULT formula where_part
    (37) default_law -> . DEFAULT formula IF formula where_part
    (38) default_law -> . DEFAULT formula AFTER formula where_part
    (39) imposs_law -> . IMPOSSIBLE formula ifcons_part where_part
    (40) nonexe_law -> . NONEXE formula if_part ifcons_part where_part
    (22) visible_law -> . VISIBLE fluent_formula if_part where_part
    (41) init_rule -> . INIT formula where_part
    (42) goal_query -> . GOAL formula where_part
    (57) formula -> . tfa
    (58) formula -> . formula COMMA tfa
    (59) tfa -> . atom
    (60) tfa -> . TRUE
    (61) tfa -> . FALSE
    (62) atom -> . fluent equalpart
    (63) atom -> . NOT fluent equalpart
    (64) atom -> . MINUS fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    ESCAPE_ASP      shift and go to state 6
    ROLE_BEGIN      shift and go to state 39
    ACT             shift and go to state 9
    INT             shift and go to state 34
    FLU             shift and go to state 31
    DFLU            shift and go to state 36
    INERTIAL        shift and go to state 40
    DEFAULT         shift and go to state 13
    IMPOSSIBLE      shift and go to state 29
    NONEXE          shift and go to state 21
    VISIBLE         shift and go to state 27
    INIT            shift and go to state 18
    GOAL            shift and go to state 33
    TRUE            shift and go to state 15
    FALSE           shift and go to state 32
    NOT             shift and go to state 11
    MINUS           shift and go to state 16
    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    imposs_law                     shift and go to state 2
    int_fact                       shift and go to state 3
    act_fact                       shift and go to state 4
    flu_fact                       shift and go to state 5
    dynamic_law                    shift and go to state 42
    query                          shift and go to state 10
    law                            shift and go to state 12
    inertial_law                   shift and go to state 14
    default_law                    shift and go to state 17
    formula                        shift and go to state 19
    nonexe_law                     shift and go to state 22
    visible_law                    shift and go to state 23
    goal_query                     shift and go to state 24
    tfa                            shift and go to state 25
    static_law                     shift and go to state 26
    atom                           shift and go to state 28
    pred_fact                      shift and go to state 30
    var_term                       shift and go to state 38
    init_rule                      shift and go to state 35
    rule                           shift and go to state 8
    fluent                         shift and go to state 37
    fact                           shift and go to state 41

state 2

    (19) law -> imposs_law .

    DOT             reduce using rule 19 (law -> imposs_law .)


state 3

    (13) fact -> int_fact .

    DOT             reduce using rule 13 (fact -> int_fact .)


state 4

    (12) fact -> act_fact .

    DOT             reduce using rule 12 (fact -> act_fact .)


state 5

    (14) fact -> flu_fact .

    DOT             reduce using rule 14 (fact -> flu_fact .)


state 6

    (3) program -> program ESCAPE_ASP .

    ESCAPE_ASP      reduce using rule 3 (program -> program ESCAPE_ASP .)
    ROLE_BEGIN      reduce using rule 3 (program -> program ESCAPE_ASP .)
    ACT             reduce using rule 3 (program -> program ESCAPE_ASP .)
    INT             reduce using rule 3 (program -> program ESCAPE_ASP .)
    FLU             reduce using rule 3 (program -> program ESCAPE_ASP .)
    DFLU            reduce using rule 3 (program -> program ESCAPE_ASP .)
    INERTIAL        reduce using rule 3 (program -> program ESCAPE_ASP .)
    DEFAULT         reduce using rule 3 (program -> program ESCAPE_ASP .)
    IMPOSSIBLE      reduce using rule 3 (program -> program ESCAPE_ASP .)
    NONEXE          reduce using rule 3 (program -> program ESCAPE_ASP .)
    VISIBLE         reduce using rule 3 (program -> program ESCAPE_ASP .)
    INIT            reduce using rule 3 (program -> program ESCAPE_ASP .)
    GOAL            reduce using rule 3 (program -> program ESCAPE_ASP .)
    TRUE            reduce using rule 3 (program -> program ESCAPE_ASP .)
    FALSE           reduce using rule 3 (program -> program ESCAPE_ASP .)
    NOT             reduce using rule 3 (program -> program ESCAPE_ASP .)
    MINUS           reduce using rule 3 (program -> program ESCAPE_ASP .)
    IDENTIFIER      reduce using rule 3 (program -> program ESCAPE_ASP .)
    VARIABLE        reduce using rule 3 (program -> program ESCAPE_ASP .)
    $end            reduce using rule 3 (program -> program ESCAPE_ASP .)


state 7

    (79) var_term -> VARIABLE .

    EQ              reduce using rule 79 (var_term -> VARIABLE .)
    COMMA           reduce using rule 79 (var_term -> VARIABLE .)
    IF              reduce using rule 79 (var_term -> VARIABLE .)
    IFCONS          reduce using rule 79 (var_term -> VARIABLE .)
    WHERE           reduce using rule 79 (var_term -> VARIABLE .)
    DOT             reduce using rule 79 (var_term -> VARIABLE .)
    CAUSES          reduce using rule 79 (var_term -> VARIABLE .)
    AFTER           reduce using rule 79 (var_term -> VARIABLE .)
    EQQ             reduce using rule 79 (var_term -> VARIABLE .)
    NEQ             reduce using rule 79 (var_term -> VARIABLE .)
    LT              reduce using rule 79 (var_term -> VARIABLE .)
    GT              reduce using rule 79 (var_term -> VARIABLE .)
    LE              reduce using rule 79 (var_term -> VARIABLE .)
    GE              reduce using rule 79 (var_term -> VARIABLE .)
    PLUS            reduce using rule 79 (var_term -> VARIABLE .)
    MINUS           reduce using rule 79 (var_term -> VARIABLE .)
    POWER           reduce using rule 79 (var_term -> VARIABLE .)
    TIMES           reduce using rule 79 (var_term -> VARIABLE .)
    DIV             reduce using rule 79 (var_term -> VARIABLE .)
    COLON           reduce using rule 79 (var_term -> VARIABLE .)
    RBRAC           reduce using rule 79 (var_term -> VARIABLE .)
    DDOT            reduce using rule 79 (var_term -> VARIABLE .)


state 8

    (2) program -> program rule . DOT

    DOT             shift and go to state 43


state 9

    (26) act_fact -> ACT . fluent_formula where_part
    (65) fluent_formula -> . fluent equalpart
    (66) fluent_formula -> . fluent_formula COMMA fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    fluent                         shift and go to state 44
    fluent_formula                 shift and go to state 45

state 10

    (10) rule -> query .

    DOT             reduce using rule 10 (rule -> query .)


state 11

    (63) atom -> NOT . fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    fluent                         shift and go to state 46
    var_term                       shift and go to state 38

state 12

    (9) rule -> law .

    DOT             reduce using rule 9 (rule -> law .)


state 13

    (36) default_law -> DEFAULT . formula where_part
    (37) default_law -> DEFAULT . formula IF formula where_part
    (38) default_law -> DEFAULT . formula AFTER formula where_part
    (57) formula -> . tfa
    (58) formula -> . formula COMMA tfa
    (59) tfa -> . atom
    (60) tfa -> . TRUE
    (61) tfa -> . FALSE
    (62) atom -> . fluent equalpart
    (63) atom -> . NOT fluent equalpart
    (64) atom -> . MINUS fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    TRUE            shift and go to state 15
    FALSE           shift and go to state 32
    NOT             shift and go to state 11
    MINUS           shift and go to state 16
    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    tfa                            shift and go to state 25
    fluent                         shift and go to state 37
    atom                           shift and go to state 28
    formula                        shift and go to state 47

state 14

    (17) law -> inertial_law .

    DOT             reduce using rule 17 (law -> inertial_law .)


state 15

    (60) tfa -> TRUE .

    COMMA           reduce using rule 60 (tfa -> TRUE .)
    IFCONS          reduce using rule 60 (tfa -> TRUE .)
    WHERE           reduce using rule 60 (tfa -> TRUE .)
    DOT             reduce using rule 60 (tfa -> TRUE .)
    IF              reduce using rule 60 (tfa -> TRUE .)
    CAUSES          reduce using rule 60 (tfa -> TRUE .)
    AFTER           reduce using rule 60 (tfa -> TRUE .)


state 16

    (64) atom -> MINUS . fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    fluent                         shift and go to state 48
    var_term                       shift and go to state 38

state 17

    (18) law -> default_law .

    DOT             reduce using rule 18 (law -> default_law .)


state 18

    (41) init_rule -> INIT . formula where_part
    (57) formula -> . tfa
    (58) formula -> . formula COMMA tfa
    (59) tfa -> . atom
    (60) tfa -> . TRUE
    (61) tfa -> . FALSE
    (62) atom -> . fluent equalpart
    (63) atom -> . NOT fluent equalpart
    (64) atom -> . MINUS fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    TRUE            shift and go to state 15
    FALSE           shift and go to state 32
    NOT             shift and go to state 11
    MINUS           shift and go to state 16
    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    tfa                            shift and go to state 25
    fluent                         shift and go to state 37
    atom                           shift and go to state 28
    formula                        shift and go to state 49

state 19

    (25) pred_fact -> formula . where_part
    (30) static_law -> formula . IF formula ifcons_part where_part
    (31) static_law -> formula . IFCONS formula where_part
    (32) dynamic_law -> formula . after_part ifcons_part where_part
    (33) dynamic_law -> formula . CAUSES formula where_part
    (34) dynamic_law -> formula . CAUSES formula IF formula where_part
    (58) formula -> formula . COMMA tfa
    (48) where_part -> .
    (49) where_part -> . WHERE bindings
    (45) after_part -> . AFTER formula

    IF              shift and go to state 57
    IFCONS          shift and go to state 53
    CAUSES          shift and go to state 56
    COMMA           shift and go to state 54
    DOT             reduce using rule 48 (where_part -> .)
    WHERE           shift and go to state 50
    AFTER           shift and go to state 52

    where_part                     shift and go to state 51
    after_part                     shift and go to state 55

state 20

    (69) fluent -> IDENTIFIER .
    (71) fluent -> IDENTIFIER . LBRAC term_list RBRAC

    EQ              reduce using rule 69 (fluent -> IDENTIFIER .)
    COMMA           reduce using rule 69 (fluent -> IDENTIFIER .)
    IFCONS          reduce using rule 69 (fluent -> IDENTIFIER .)
    WHERE           reduce using rule 69 (fluent -> IDENTIFIER .)
    DOT             reduce using rule 69 (fluent -> IDENTIFIER .)
    IF              reduce using rule 69 (fluent -> IDENTIFIER .)
    CAUSES          reduce using rule 69 (fluent -> IDENTIFIER .)
    AFTER           reduce using rule 69 (fluent -> IDENTIFIER .)
    COLON           reduce using rule 69 (fluent -> IDENTIFIER .)
    LBRAC           shift and go to state 58


state 21

    (40) nonexe_law -> NONEXE . formula if_part ifcons_part where_part
    (57) formula -> . tfa
    (58) formula -> . formula COMMA tfa
    (59) tfa -> . atom
    (60) tfa -> . TRUE
    (61) tfa -> . FALSE
    (62) atom -> . fluent equalpart
    (63) atom -> . NOT fluent equalpart
    (64) atom -> . MINUS fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    TRUE            shift and go to state 15
    FALSE           shift and go to state 32
    NOT             shift and go to state 11
    MINUS           shift and go to state 16
    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    tfa                            shift and go to state 25
    fluent                         shift and go to state 37
    atom                           shift and go to state 28
    formula                        shift and go to state 59

state 22

    (20) law -> nonexe_law .

    DOT             reduce using rule 20 (law -> nonexe_law .)


state 23

    (21) law -> visible_law .

    DOT             reduce using rule 21 (law -> visible_law .)


state 24

    (24) query -> goal_query .

    DOT             reduce using rule 24 (query -> goal_query .)


state 25

    (57) formula -> tfa .

    COMMA           reduce using rule 57 (formula -> tfa .)
    IFCONS          reduce using rule 57 (formula -> tfa .)
    WHERE           reduce using rule 57 (formula -> tfa .)
    DOT             reduce using rule 57 (formula -> tfa .)
    IF              reduce using rule 57 (formula -> tfa .)
    AFTER           reduce using rule 57 (formula -> tfa .)
    CAUSES          reduce using rule 57 (formula -> tfa .)


state 26

    (15) law -> static_law .

    DOT             reduce using rule 15 (law -> static_law .)


state 27

    (22) visible_law -> VISIBLE . fluent_formula if_part where_part
    (65) fluent_formula -> . fluent equalpart
    (66) fluent_formula -> . fluent_formula COMMA fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    fluent                         shift and go to state 44
    fluent_formula                 shift and go to state 60

state 28

    (59) tfa -> atom .

    COMMA           reduce using rule 59 (tfa -> atom .)
    IFCONS          reduce using rule 59 (tfa -> atom .)
    WHERE           reduce using rule 59 (tfa -> atom .)
    DOT             reduce using rule 59 (tfa -> atom .)
    IF              reduce using rule 59 (tfa -> atom .)
    CAUSES          reduce using rule 59 (tfa -> atom .)
    AFTER           reduce using rule 59 (tfa -> atom .)


state 29

    (39) imposs_law -> IMPOSSIBLE . formula ifcons_part where_part
    (57) formula -> . tfa
    (58) formula -> . formula COMMA tfa
    (59) tfa -> . atom
    (60) tfa -> . TRUE
    (61) tfa -> . FALSE
    (62) atom -> . fluent equalpart
    (63) atom -> . NOT fluent equalpart
    (64) atom -> . MINUS fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    TRUE            shift and go to state 15
    FALSE           shift and go to state 32
    NOT             shift and go to state 11
    MINUS           shift and go to state 16
    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    tfa                            shift and go to state 25
    fluent                         shift and go to state 37
    atom                           shift and go to state 28
    formula                        shift and go to state 61

state 30

    (11) fact -> pred_fact .

    DOT             reduce using rule 11 (fact -> pred_fact .)


state 31

    (28) flu_fact -> FLU . fluent_formula where_part
    (65) fluent_formula -> . fluent equalpart
    (66) fluent_formula -> . fluent_formula COMMA fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    fluent                         shift and go to state 44
    fluent_formula                 shift and go to state 62

state 32

    (61) tfa -> FALSE .

    COMMA           reduce using rule 61 (tfa -> FALSE .)
    IFCONS          reduce using rule 61 (tfa -> FALSE .)
    WHERE           reduce using rule 61 (tfa -> FALSE .)
    DOT             reduce using rule 61 (tfa -> FALSE .)
    IF              reduce using rule 61 (tfa -> FALSE .)
    CAUSES          reduce using rule 61 (tfa -> FALSE .)
    AFTER           reduce using rule 61 (tfa -> FALSE .)


state 33

    (42) goal_query -> GOAL . formula where_part
    (57) formula -> . tfa
    (58) formula -> . formula COMMA tfa
    (59) tfa -> . atom
    (60) tfa -> . TRUE
    (61) tfa -> . FALSE
    (62) atom -> . fluent equalpart
    (63) atom -> . NOT fluent equalpart
    (64) atom -> . MINUS fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    TRUE            shift and go to state 15
    FALSE           shift and go to state 32
    NOT             shift and go to state 11
    MINUS           shift and go to state 16
    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    tfa                            shift and go to state 25
    fluent                         shift and go to state 37
    atom                           shift and go to state 28
    formula                        shift and go to state 63

state 34

    (27) int_fact -> INT . fluent_formula int_domain where_part
    (65) fluent_formula -> . fluent equalpart
    (66) fluent_formula -> . fluent_formula COMMA fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    fluent                         shift and go to state 44
    fluent_formula                 shift and go to state 64

state 35

    (23) query -> init_rule .

    DOT             reduce using rule 23 (query -> init_rule .)


state 36

    (29) flu_fact -> DFLU . fluent_formula where_part
    (65) fluent_formula -> . fluent equalpart
    (66) fluent_formula -> . fluent_formula COMMA fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    fluent                         shift and go to state 44
    fluent_formula                 shift and go to state 65

state 37

    (62) atom -> fluent . equalpart
    (67) equalpart -> .
    (68) equalpart -> . EQ term

    IF              reduce using rule 67 (equalpart -> .)
    IFCONS          reduce using rule 67 (equalpart -> .)
    CAUSES          reduce using rule 67 (equalpart -> .)
    COMMA           reduce using rule 67 (equalpart -> .)
    WHERE           reduce using rule 67 (equalpart -> .)
    AFTER           reduce using rule 67 (equalpart -> .)
    DOT             reduce using rule 67 (equalpart -> .)
    EQ              shift and go to state 66

    equalpart                      shift and go to state 67

state 38

    (70) fluent -> var_term .

    EQ              reduce using rule 70 (fluent -> var_term .)
    COMMA           reduce using rule 70 (fluent -> var_term .)
    IFCONS          reduce using rule 70 (fluent -> var_term .)
    WHERE           reduce using rule 70 (fluent -> var_term .)
    DOT             reduce using rule 70 (fluent -> var_term .)
    IF              reduce using rule 70 (fluent -> var_term .)
    CAUSES          reduce using rule 70 (fluent -> var_term .)
    AFTER           reduce using rule 70 (fluent -> var_term .)
    COLON           reduce using rule 70 (fluent -> var_term .)


state 39

    (4) program -> program ROLE_BEGIN . role ROLE_END
    (5) role -> .
    (6) role -> . role rule DOT
    (7) role -> . role ESCAPE_ASP

    ROLE_END        reduce using rule 5 (role -> .)
    ESCAPE_ASP      reduce using rule 5 (role -> .)
    ACT             reduce using rule 5 (role -> .)
    INT             reduce using rule 5 (role -> .)
    FLU             reduce using rule 5 (role -> .)
    DFLU            reduce using rule 5 (role -> .)
    INERTIAL        reduce using rule 5 (role -> .)
    DEFAULT         reduce using rule 5 (role -> .)
    IMPOSSIBLE      reduce using rule 5 (role -> .)
    NONEXE          reduce using rule 5 (role -> .)
    VISIBLE         reduce using rule 5 (role -> .)
    INIT            reduce using rule 5 (role -> .)
    GOAL            reduce using rule 5 (role -> .)
    TRUE            reduce using rule 5 (role -> .)
    FALSE           reduce using rule 5 (role -> .)
    NOT             reduce using rule 5 (role -> .)
    MINUS           reduce using rule 5 (role -> .)
    IDENTIFIER      reduce using rule 5 (role -> .)
    VARIABLE        reduce using rule 5 (role -> .)

    role                           shift and go to state 68

state 40

    (35) inertial_law -> INERTIAL . fluent_formula where_part
    (65) fluent_formula -> . fluent equalpart
    (66) fluent_formula -> . fluent_formula COMMA fluent equalpart
    (69) fluent -> . IDENTIFIER
    (70) fluent -> . var_term
    (71) fluent -> . IDENTIFIER LBRAC term_list RBRAC
    (79) var_term -> . VARIABLE

    IDENTIFIER      shift and go to state 20
    VARIABLE        shift and go to state 7

    var_term                       shift and go to state 38
    fluent                         shift and go to state 44
    fluent_formula                 shift and go to state 69

state 41

    (8) rule -> fact .

    DOT             reduce using rule 8 (rule -> fact .)


state 42

    (16) law -> dynamic_law .

    DOT             reduce using rule 16 (law -> dynamic_law .)


state 43

    (2) program -> program rule DOT .

    ESCAPE_ASP      reduce using rule 2 (program -> program rule DOT .)
    ROLE_BEGIN      reduce using rule 2 (program -> program rule DOT .)
    ACT             reduce using rule 2 (program -> program rule DOT .)
    INT             reduce using rule 2 (program -> program rule DOT .)
    FLU             reduce using rule 2 (program -> program rule DOT .)
    DFLU            reduce using rule 2 (program -> program rule DOT .)
    INERTIAL        reduce using rule 2 (program -> program rule DOT .)
    DEFAULT         reduce using rule 2 (program -> program rule DOT .)
    IMPOSSIBLE      reduce using rule 2 (program -> program rule DOT .)
    NONEXE          reduce using rule 2 (program -> program rule DOT .)
    VISIBLE         reduce using rule 2 (program -> program rule DOT .)
    INIT            reduce using rule 2 (program -> program rule DOT .)
    GOAL            reduce using rule 2 (program -> program rule DOT .)
    TRUE            reduce using rule 2 (program -> program rule DOT .)
    FALSE           reduce using rule 2 (program -> program rule DOT .)
    NOT             reduce using rule 2 (program -> program rule DOT .)
    MINUS           reduce using rule 2 (program -> program rule DOT .)
    IDENTIFIER      reduce using rule 2 (program -> program rule DOT .)
    VARIABLE        reduce using rule 2 (program -> program rule DOT .)
    $end            reduce using rule 2 (program -> program rule DOT .)


state 44

    (65) fluent_formula -> fluent . equalpart
    (67) equalpart -> .
    (68) equalpart -> . EQ term

    COMMA           reduce using rule 67 (equalpart -> .)
    WHERE           reduce using rule 67 (equalpart -> .)
    DOT             reduce using rule 67 (equalpart -> .)
    IF              reduce using rule 67 (equalpart -> .)
    COLON           reduce using rule 67 (equalpart -> .)
    EQ              shift and go to state 66

    equalpart                      shift and go to state 70

state 45

    (26) act_fact -> ACT fluent_formula . where_part
    (66) fluent_formula -> fluent_formula . COMMA fluent equalpart
    (48) where_part -> .
    (49) where_part -> . WHERE bindings

    COMMA           shift and go to state 72
    DOT             reduce using rule 48 (where_part -> .)
    WHERE           shift and go to state 50

    where_part                     shift and go to state 71

state 46

    (63) atom -> NOT fluent . equalpart
    (67) equalpart -> .
    (68) equalpart -> . EQ term
